--- a/starter/src/App.css
+++ b/starter/src/App.css
@@ -3,21 +3,29 @@ body,
 .root {
   height: 100%;
 }
+
+.search-contacts
+
 body {
   line-height: 1.5;
 }
+
 body,
 .app {
-  background: white;
+  /* background: white; */
+  background: #202124;
+  ;
 }
 
 /* main page */
 
 .list-books-title {
   padding: 10px 0;
-  background: #2e7c31;
+  /* background: #2e7c31; */
+  background: #3c6d3b;
   text-align: center;
 }
+
 .list-books-title h1 {
   font-weight: 400;
   margin: 0;
@@ -42,6 +50,7 @@ body,
 .bookshelf-title {
   border-bottom: 1px solid #dedede;
 }
+
 .bookshelf-books {
   text-align: center;
 }
@@ -51,6 +60,7 @@ body,
   right: 25px;
   bottom: 25px;
 }
+
 .open-search {
   display: block;
   width: 50px;
@@ -67,6 +77,12 @@ body,
 
 /* search page */
 
+.search-books {
+  background-color: #303134;
+  color:#ADB1B5;
+  font-weight: lighter;
+}
+
 .search-books-bar {
   position: fixed;
   width: 100%;
@@ -76,18 +92,12 @@ body,
   display: flex;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 0 6px rgba(0, 0, 0, 0.23);
 }
+
 .search-books-input-wrapper {
   flex: 1;
-  background: #e9e;
+  /* background: #e9e; */
 }
 
-.showing-books button {
-  color: blue;
-  background: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: inherit;
-}
 .search-books-bar input {
   width: 100%;
   padding: 15px 10px;
@@ -102,7 +112,8 @@ body,
   left: 15px;
   width: 50px;
   height: 53px;
-  background: white;
+  /* background: white; */
+  background: rgb(182, 181, 181);
   background-image: url("./icons/arrow-back.svg");
   background-position: center;
   background-repeat: no-repeat;
@@ -111,7 +122,16 @@ body,
 }
 
 .search-books-results {
-  padding: 80px 10px 20px;
+  padding: 70px 20px 20px;
+  /* padding: inherit; */
+}
+
+.search-books-results button {
+  color: #59a458;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: inherit;
 }
 
 /* books grid */
@@ -125,6 +145,7 @@ body,
   justify-content: center;
   flex-wrap: wrap;
 }
+
 .books-grid li {
   padding: 10px 15px;
   text-align: left;
@@ -133,15 +154,20 @@ body,
 .book {
   width: 140px;
 }
-.book-title,
+
+/* .book-title,
 .book-authors {
   font-size: 0.8em;
-}
+} */
 .book-title {
+  color: rgb(220, 218, 218);
   margin-top: 10px;
+  font-size: 0.8em;
 }
+
 .book-authors {
   color: #999;
+  font-size: 0.75em;
 }
 
 .book-top {
@@ -158,13 +184,14 @@ body,
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #60ac5d;
+  background: #3c6d3b;
   background-image: url("./icons/arrow-drop-down.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 20px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
+
 .book-shelf-changer select {
   width: 100%;
   height: 100%;
@@ -178,6 +205,7 @@ body,
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   background: #eee;
 }
+
 .book-cover-title {
   padding: 20px 10px 0;
   text-align: center;
